# rag-api-rsm

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.d  README.md  docker-compose.yml  grafana.env.example  log_util.py  main.py  prometheus.env.example  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  test_main.py
app/: main.py
app/api/: lifespan_setup.py  main.py  route.py
app/api/routes/: health.py  ingest.py  metrics.py  query.py
app/config/: pydantic_settings.py
app/core/: exceptions.py  logging.py  metrics.py
app/core/chat_model/: llm.py  prompt.py
app/core/embeddings/: compute_embeddings.py  embeddings_model.py
app/core/exceptions/: exceptions.py  http_exceptions.py
app/core/ingest/: ingest.py
app/core/langgraph/: langgraph.py  models.py
app/core/loader/: content_loader.py  text_splitter.py  url_loader.py
app/core/observability/: langfuse.py
app/core/vector_store/: vectorstore.py
app/exceptions/: handlers.py  http_exceptions.py
app/models/: schemas.py
app/services/: vectorstore.py
grafana/dashboards/: app-monitoring.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
